samples/_failures_safe/1761357265_a017f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b751c419.c: In function ‘main’:
./samples/SAFE/__tmp_b751c419.c:147:44: error: expected ‘)’ at end of input
  147 |         double det = compute_determinant(&a
      |                                         ~  ^
      |                                            )
./samples/SAFE/__tmp_b751c419.c:147:9: error: expected declaration or statement at end of input
  147 |         double det = compute_determinant(&a
      |         ^~~~~~
./samples/SAFE/__tmp_b751c419.c:147:9: error: expected declaration or statement at end of input
